@@ -24,7 +24,10 @@ ENDIF ()
 
 IF (WIN32)
   SET ( CMAKE_DEBUG_POSTFIX "D" )
-  ADD_DEFINITIONS ( -D_CRT_SECURE_NO_WARNINGS -DLOG4CPP_HAS_DLL -DLOG4CPP_BUILD_DLL )
+  ADD_DEFINITIONS ( -DWIN32 )
+  IF ( NOT CMAKE_BUILD_TYPE STREQUAL "Release" )
+    SET ( WIN_DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX} )
+  ENDIF()
 ELSE (WIN32)
   IF (APPLE)
     ADD_DEFINITIONS ( -DLOG4CPP_HAVE_SSTREAM )
@@ -97,7 +100,7 @@ ELSE()
   ENDIF ()
 ENDIF()
 
-message("LOG4CPP_BUILD_SHARED is ${LOG4CPP_BUILD_SHARED} LOG4CPP_BUILD_STATIC is ${LOG4CPP_BUILD_STATIC}")
+MESSAGE("LOG4CPP_BUILD_SHARED is ${LOG4CPP_BUILD_SHARED}; LOG4CPP_BUILD_STATIC is ${LOG4CPP_BUILD_STATIC}")
 
 IF (LOG4CPP_BUILD_STATIC)
   ADD_LIBRARY ( LOG4CPP_STATIC STATIC ${LOG4CPP_LIBRARY_SOURCES} )
@@ -109,20 +112,31 @@ IF (LOG4CPP_BUILD_STATIC)
   ENDIF()
   TARGET_COMPILE_DEFINITIONS ( LOG4CPP_STATIC PRIVATE $<$<CONFIG:Debug>:_DEBUG DEBUG LOG4CPP_FIX_ERROR_COLLISION> )
   TARGET_COMPILE_DEFINITIONS ( LOG4CPP_STATIC PRIVATE $<$<CONFIG:Release>:NDEBUG> )
-ENDIF ()
+ENDIF (LOG4CPP_BUILD_STATIC)
 
 IF (LOG4CPP_BUILD_SHARED)
   ADD_LIBRARY ( LOG4CPP_SHARED SHARED ${LOG4CPP_LIBRARY_SOURCES} )
   SET_TARGET_PROPERTIES( LOG4CPP_SHARED PROPERTIES OUTPUT_NAME ${LOG4CPP_LIBRARY_NAME} )
   TARGET_COMPILE_DEFINITIONS ( LOG4CPP_SHARED PRIVATE $<$<CONFIG:Debug>:_DEBUG DEBUG LOG4CPP_FIX_ERROR_COLLISION> )
   TARGET_COMPILE_DEFINITIONS ( LOG4CPP_SHARED PRIVATE $<$<CONFIG:Release>:NDEBUG> )
-ENDIF ()
+  IF (WIN32)
+    TARGET_COMPILE_DEFINITIONS ( LOG4CPP_SHARED PRIVATE -D_CRT_SECURE_NO_WARNINGS -DLOG4CPP_HAS_DLL -DLOG4CPP_BUILD_DLL )
+  ENDIF (WIN32)
+ENDIF (LOG4CPP_BUILD_SHARED)
 
 IF (WIN32)
-  TARGET_LINK_LIBRARIES ( LOG4CPP_STATIC PRIVATE kernel32 user32 ws2_32 advapi32 msvcrt${CMAKE_DEBUG_POSTFIX} )
-  SET_TARGET_PROPERTIES ( LOG4CPP_STATIC PROPERTIES LINK_FLAGS /NODEFAULTLIB:msvcrt${CMAKE_DEBUG_POSTFIX}  )
-  TARGET_LINK_LIBRARIES ( LOG4CPP_SHARED PRIVATE kernel32 user32 ws2_32 advapi32 msvcrt${CMAKE_DEBUG_POSTFIX} )
-  SET_TARGET_PROPERTIES ( LOG4CPP_SHARED PROPERTIES LINK_FLAGS /NODEFAULTLIB:msvcrt${CMAKE_DEBUG_POSTFIX} )
+  # RAD Studio specifics
+  IF (CMAKE_CXX_COMPILER MATCHES ".*bcc32c.*" OR CMAKE_CXX_COMPILER MATCHES ".*bcc64x.*")
+    MESSAGE(STATUS "Embarcadero C++Builder detected")
+    SET ( WIN_DEBUG_POSTFIX "" )
+    SET_EMBT_TARGET( LOG4CPP_STATIC RTL )
+    SET_EMBT_TARGET( LOG4CPP_SHARED RTL )
+  ENDIF()
+  
+  TARGET_LINK_LIBRARIES ( LOG4CPP_STATIC PRIVATE kernel32 user32 ws2_32 advapi32 msvcrt${WIN_DEBUG_POSTFIX} )
+  #SET_TARGET_PROPERTIES ( LOG4CPP_STATIC PROPERTIES LINK_FLAGS /NODEFAULTLIB:msvcrt${WIN_DEBUG_POSTFIX}  )
+  TARGET_LINK_LIBRARIES ( LOG4CPP_SHARED PRIVATE kernel32 user32 ws2_32 advapi32 msvcrt${WIN_DEBUG_POSTFIX} )
+  #SET_TARGET_PROPERTIES ( LOG4CPP_SHARED PROPERTIES LINK_FLAGS /NODEFAULTLIB:msvcrt${WIN_DEBUG_POSTFIX} )
 ENDIF (WIN32)
 
 INSTALL (
